Revise fixtures used in unit tests

--- a/app/api/fixtures/test/test_transient_data.yaml
+++ b/app/api/fixtures/test/test_transient_data.yaml
@@ -1,125 +1,163 @@
 - model: host.Host
+  pk: 4
   fields:
     name: PSO J080624.103+010209.859
     ra_deg: 121.60043802
     dec_deg: 1.03606313
 - model: host.Transient
+  pk: 5
   fields:
     name: 2022testone
     tns_id: 9999
-    public_timestamp: 2022-02-04 07:29:02.112+00:00
+    public_timestamp: 2022-02-04 07:29:02.112000+00:00
     tns_prefix: AT
-    ra_deg: 120.0273250
+    ra_deg: 120.027325
     dec_deg: 2.1707639
-    host: [PSO J080624.103+010209.859]
+    host:
+    - PSO J080624.103+010209.859
 - model: host.Survey
+  pk: 1
   fields:
     name: 2MASS
 - model: host.Filter
+  pk: 1
   fields:
     name: 2MASS_H
-    survey: [2MASS]
+    survey:
+    - 2MASS
     sedpy_id: twomass_H
     hips_id: CDS/P/2MASS/H
     pixel_size_arcsec: 1.0
     vosa_id: 2MASS/2MASS.H
     image_download_method: hips
-    wavelength_eff_angstrom: 16620.00
+    wavelength_eff_angstrom: 16620.0
     wavelength_min_angstrom: 14787.38
     wavelength_max_angstrom: 18231.02
-    vega_zero_point_jansky: 1024.00
+    vega_zero_point_jansky: 1024.0
     magnitude_zero_point: 20.4871
-    image_pixel_units: 'counts/sec'
-    kcorrect_name: 'twomass_H'
+    image_pixel_units: counts/sec
+    kcorrect_name: twomass_H
 - model: host.Filter
+  pk: 2
   fields:
     name: 2MASS_J
-    survey: [2MASS]
+    survey:
+    - 2MASS
     sedpy_id: twomass_j
     hips_id: CDS/P/2MASS/J
     pixel_size_arcsec: 1.0
     vosa_id: 2MASS/2MASS.J
     image_download_method: hips
-    wavelength_eff_angstrom: 12350.00
+    wavelength_eff_angstrom: 12350.0
     wavelength_min_angstrom: 10806.47
     wavelength_max_angstrom: 14067.97
-    vega_zero_point_jansky: 1594.00
+    vega_zero_point_jansky: 1594.0
     magnitude_zero_point: 20.9044
-    image_pixel_units: 'counts/sec'
-    kcorrect_name: 'twomass_J'
+    image_pixel_units: counts/sec
+    kcorrect_name: twomass_J
 - model: host.Cutout
+  pk: 21
   fields:
-      name: 2022testone_2MASS_J
-      filter: [2MASS_J]
-      transient: [2022testone]
-      fits: /data/cutout_cdn/2010H/2MASS/2MASS_J.fits
+    name: 2022testone_2MASS_J
+    filter:
+    - 2MASS_J
+    transient:
+    - 2022testone
+    fits: /data/cutout_cdn/2010H/2MASS/2MASS_J.fits
 - model: host.Cutout
+  pk: 22
   fields:
-      name: 2022testone_2MASS_H
-      filter: [2MASS_H]
-      transient: [2022testone]
-      fits: /data/cutout_cdn/2010H/2MASS/2MASS_H.fits
+    name: 2022testone_2MASS_H
+    filter:
+    - 2MASS_H
+    transient:
+    - 2022testone
+    fits: /data/cutout_cdn/2010H/2MASS/2MASS_H.fits
 - model: host.Aperture
+  pk: 5
   fields:
-      name: 2022testone_local
-      transient: [2022testone]
-      orientation_deg: 0.0
-      ra_deg: 121.6015
-      dec_deg: 1.03586
-      semi_major_axis_arcsec: 1.0
-      semi_minor_axis_arcsec: 1.0
-      type: local
+    name: 2022testone_local
+    transient:
+    - 2022testone
+    orientation_deg: 0.0
+    ra_deg: 121.6015
+    dec_deg: 1.03586
+    semi_major_axis_arcsec: 1.0
+    semi_minor_axis_arcsec: 1.0
+    type: local
 - model: host.Aperture
+  pk: 6
   fields:
-      name: 2022testone_2MASS_H_global
-      cutout: [2022testone_2MASS_J]
-      transient: [2022testone]
-      orientation_deg: 0.0
-      ra_deg: 11.6015
-      dec_deg: 10.03586
-      semi_major_axis_arcsec: 0.4
-      semi_minor_axis_arcsec: 0.5
-      type: global
+    name: 2022testone_2MASS_H_global
+    cutout:
+    - 2022testone_2MASS_J
+    transient:
+    - 2022testone
+    orientation_deg: 0.0
+    ra_deg: 11.6015
+    dec_deg: 10.03586
+    semi_major_axis_arcsec: 0.4
+    semi_minor_axis_arcsec: 0.5
+    type: global
 - model: host.AperturePhotometry
+  pk: 38
   fields:
-      aperture: [2022testone_local]
-      filter: [2MASS_J]
-      transient: [2022testone]
-      flux: 1091.48
-      flux_error: 130.38
-      magnitude: 0.0
-      magnitude_error: 0.0
+    aperture:
+    - 2022testone_local
+    filter:
+    - 2MASS_J
+    transient:
+    - 2022testone
+    flux: 1091.48
+    flux_error: 130.38
+    magnitude: 0.0
+    magnitude_error: 0.0
 - model: host.AperturePhotometry
+  pk: 39
   fields:
-      aperture: [2022testone_local]
-      filter: [2MASS_H]
-      transient: [2022testone]
-      flux: 2183.8
-      flux_error: 224.97
-      magnitude: 0.0
-      magnitude_error: 0.0
+    aperture:
+    - 2022testone_local
+    filter:
+    - 2MASS_H
+    transient:
+    - 2022testone
+    flux: 2183.8
+    flux_error: 224.97
+    magnitude: 0.0
+    magnitude_error: 0.0
 - model: host.AperturePhotometry
+  pk: 40
   fields:
-      aperture: [2022testone_2MASS_H_global]
-      filter: [2MASS_J]
-      transient: [2022testone]
-      flux: 99
-      flux_error: 99
-      magnitude: 0.0
-      magnitude_error: 0.0
+    aperture:
+    - 2022testone_2MASS_H_global
+    filter:
+    - 2MASS_J
+    transient:
+    - 2022testone
+    flux: 99
+    flux_error: 99
+    magnitude: 0.0
+    magnitude_error: 0.0
 - model: host.AperturePhotometry
+  pk: 41
   fields:
-      aperture: [2022testone_2MASS_H_global]
-      filter: [2MASS_H]
-      transient: [2022testone]
-      flux: 1.0
-      flux_error: 1.0
-      magnitude: 10
-      magnitude_error: 0.2
+    aperture:
+    - 2022testone_2MASS_H_global
+    filter:
+    - 2MASS_H
+    transient:
+    - 2022testone
+    flux: 1.0
+    flux_error: 1.0
+    magnitude: 10
+    magnitude_error: 0.2
 - model: host.SEDFittingResult
+  pk: 5
   fields:
-    transient: [2022testone]
-    aperture: [2022testone_local]
+    transient:
+    - 2022testone
+    aperture:
+    - 2022testone_local
     log_mass_16: 10.0
     log_mass_50: 20.0
     log_mass_84: 30.0
@@ -136,9 +174,12 @@
     log_tau_50: 5.0
     log_tau_84: 60
 - model: host.SEDFittingResult
+  pk: 6
   fields:
-    transient: [2022testone]
-    aperture: [2022testone_2MASS_H_global]
+    transient:
+    - 2022testone
+    aperture:
+    - 2022testone_2MASS_H_global
     log_mass_16: 1.0
     log_mass_50: 2.0
     log_mass_84: 3.0
