Mount app folder in parallel with docs for ReadTheDocs build compatibility

--- a/docker/docker-compose.docs.yaml
+++ b/docker/docker-compose.docs.yaml
@@ -32,4 +32,4 @@ services:
       - sphinx-build -a /opt/docs /opt/docs/build/
     volumes:
       - ../docs:/opt/docs
-      - ../app:/app
+      - ../app:/opt/app
