--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -44,13 +44,13 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to container registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: "hub.ncsa.illinois.edu"
-          username: "${{ secrets.NCSA_HARBOR_BLAST_USERNAME }}"
-          password: "${{ secrets.NCSA_HARBOR_BLAST_TOKEN }}"
+      # - name: Login to container registry
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: "hub.ncsa.illinois.edu"
+      #     username: "${{ secrets.NCSA_HARBOR_BLAST_USERNAME }}"
+      #     password: "${{ secrets.NCSA_HARBOR_BLAST_TOKEN }}"
 
       - name: Build and push
         id: docker_build
