--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -24,14 +24,16 @@ jobs:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
-          tool-cache: true
+          tool-cache: false
+          large-packages: true
           docker-images: false
+          swap-storage: true
       - name: Checkout
         uses: actions/checkout@v4
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=hub.ncsa.illinois.edu/blast/blast
+          DOCKER_IMAGE=registry.gitlab.com/ncsa-blast/kubernetes/blast
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
             TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:dev"
@@ -44,13 +46,13 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Login to container registry
-      #   if: github.event_name != 'pull_request'
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: "hub.ncsa.illinois.edu"
-      #     username: "${{ secrets.NCSA_HARBOR_BLAST_USERNAME }}"
-      #     password: "${{ secrets.NCSA_HARBOR_BLAST_TOKEN }}"
+      - name: Login to container registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: "registry.gitlab.com"
+          username: "${{ secrets.GITLAB_REGISTRY_USERNAME }}"
+          password: "${{ secrets.GITLAB_REGISTRY_TOKEN }}"
 
       - name: Build and push
         id: docker_build
