--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -29,6 +29,8 @@ services:
       - ../env/.env.dev
   blast_ci:
     image: registry.gitlab.com/ncsa-blast/kubernetes/blast:dev
+    # build:
+    #   context: ../app/
     volumes:
       - ./dustmapsrc:/tmp/.dustmapsrc:ro
       - blast-data:/mnt/data
