--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -2,9 +2,9 @@ name: Publish Docker image
 
 on:
   push:
-    branches: [dev]
+    branches: [main]
     tags:
-      - "*"
+      - "v[0-9]+.[0-9]+.[0-9]+"
     paths:
       - "docker/**"
       - "env/**"
@@ -31,9 +31,9 @@ jobs:
           DOCKER_IMAGE=registry.gitlab.com/ncsa-blast/kubernetes/blast
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
-            TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:dev"
+            TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:latest"
           else
-            TAGS="${DOCKER_IMAGE}:dev"
+            TAGS="${DOCKER_IMAGE}:latest"
           fi
           echo ::set-output name=tags::${TAGS}
 
